    * Repeated options now issue warnings
    * Special characters in username, password and other values must be url encoded
    * Unsupported connection string options now issue warnings
    * Boolean values can now be represented as true/yes/y/t/1 and false/no/n/f/0.
  * New function mongoc_cursor_error_document provides access to server's error
    reply if a query or command fails.

mongo-c-driver 1.6.0
====================

It is my please to announce mongo-c-driver 1.6.0.

New features and bug fixes:

  * Enterprise authentication on Windows now uses the native GSSAPI library;
    Cyrus SASL is no longer required for enterprise auth on Windows.
  * BSON documents are more thoroughly validated before insert or update.
  * New function mongoc_uri_set_mechanism_properties to replace all the
    authMechanismProperties on an existing URI.
  * mongoc_uri_get_mechanism_properties asserts its inputs are not NULL.
  * For consistency with other MongoDB drivers, mongoc_collection_save is
    deprecated in favor of mongoc_collection_insert or mongoc_collection_update.
  * The driver is now built and continuously tested with MinGW-W64 on Windows.
  * Experimental support for HPUX.
  * The correct operation ids are now passed to Command Monitoring callbacks.
  * Fix a crash if the driver couldn't connect to the server to create an index.
  * The documentation is ported from Mallard XML to ReStructured Text, the
    HTML documentation is restyled, and numerous man page syntax errors fixed.
  * Getter functions for options in mongoc_find_and_modify_opts_t:
    * mongoc_find_and_modify_opts_get_bypass_document_validation
    * mongoc_find_and_modify_opts_get_fields
    * mongoc_find_and_modify_opts_get_flags
    * mongoc_find_and_modify_opts_get_max_time_ms
    * mongoc_find_and_modify_opts_get_sort
    * mongoc_find_and_modify_opts_get_update
  * All public functions now have the __cdecl calling convention on Windows.
