@@ -606,6 +606,28 @@ background_mongoc_gridfs_file_writev (void *data)
 }
 
 static void *
+background_mongoc_gridfs_find_one_with_opts (void *data)
+{
+   future_t *future = (future_t *) data;
+   future_value_t return_value;
+
+   return_value.type = future_value_mongoc_gridfs_file_ptr_type;
+
+   future_value_set_mongoc_gridfs_file_ptr (
+      &return_value,
+      mongoc_gridfs_find_one_with_opts (
+         future_value_get_mongoc_gridfs_ptr (future_get_param (future, 0)),
+         future_value_get_const_bson_ptr (future_get_param (future, 1)),
+         future_value_get_const_bson_ptr (future_get_param (future, 2)),
+         future_value_get_bson_error_ptr (future_get_param (future, 3))
+      ));
+
+   future_resolve (future, return_value);
+
+   return NULL;
+}
+
+static void *
 background_mongoc_topology_select (void *data)
 {
    future_t *future = (future_t *) data;
@@ -1380,6 +1402,32 @@ future_gridfs_file_writev (
       future_get_param (future, 3), timeout_msec);
    
    future_start (future, background_mongoc_gridfs_file_writev);
+   return future;
+}
+
+future_t *
+future_gridfs_find_one_with_opts (
+   mongoc_gridfs_ptr gridfs,
+   const_bson_ptr filter,
+   const_bson_ptr opts,
+   bson_error_ptr error)
+{
+   future_t *future = future_new (future_value_mongoc_gridfs_file_ptr_type,
+                                  4);
+   
+   future_value_set_mongoc_gridfs_ptr (
+      future_get_param (future, 0), gridfs);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 1), filter);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 2), opts);
+   
+   future_value_set_bson_error_ptr (
+      future_get_param (future, 3), error);
+   
+   future_start (future, background_mongoc_gridfs_find_one_with_opts);
    return future;
 }
 
