@@ -140,8 +140,7 @@ future_value_get_uint32_t (future_value_t *future_value)
 }
 
 void
-future_value_set_const_char_ptr (future_value_t *future_value,
-                                 const_char_ptr value)
+future_value_set_const_char_ptr (future_value_t *future_value, const_char_ptr value)
 {
    future_value->type = future_value_const_char_ptr_type;
    future_value->const_char_ptr_value = value;
@@ -155,8 +154,7 @@ future_value_get_const_char_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_bson_error_ptr (future_value_t *future_value,
-                                 bson_error_ptr value)
+future_value_set_bson_error_ptr (future_value_t *future_value, bson_error_ptr value)
 {
    future_value->type = future_value_bson_error_ptr_type;
    future_value->bson_error_ptr_value = value;
@@ -184,8 +182,7 @@ future_value_get_bson_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_const_bson_ptr (future_value_t *future_value,
-                                 const_bson_ptr value)
+future_value_set_const_bson_ptr (future_value_t *future_value, const_bson_ptr value)
 {
    future_value->type = future_value_const_bson_ptr_type;
    future_value->const_bson_ptr_value = value;
@@ -199,8 +196,7 @@ future_value_get_const_bson_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_const_bson_ptr_ptr (future_value_t *future_value,
-                                     const_bson_ptr_ptr value)
+future_value_set_const_bson_ptr_ptr (future_value_t *future_value, const_bson_ptr_ptr value)
 {
    future_value->type = future_value_const_bson_ptr_ptr_type;
    future_value->const_bson_ptr_ptr_value = value;
@@ -214,8 +210,7 @@ future_value_get_const_bson_ptr_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_bulk_operation_ptr (future_value_t *future_value,
-                                            mongoc_bulk_operation_ptr value)
+future_value_set_mongoc_bulk_operation_ptr (future_value_t *future_value, mongoc_bulk_operation_ptr value)
 {
    future_value->type = future_value_mongoc_bulk_operation_ptr_type;
    future_value->mongoc_bulk_operation_ptr_value = value;
@@ -224,14 +219,12 @@ future_value_set_mongoc_bulk_operation_ptr (future_value_t *future_value,
 mongoc_bulk_operation_ptr
 future_value_get_mongoc_bulk_operation_ptr (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_mongoc_bulk_operation_ptr_type);
+   BSON_ASSERT (future_value->type == future_value_mongoc_bulk_operation_ptr_type);
    return future_value->mongoc_bulk_operation_ptr_value;
 }
 
 void
-future_value_set_mongoc_client_ptr (future_value_t *future_value,
-                                    mongoc_client_ptr value)
+future_value_set_mongoc_client_ptr (future_value_t *future_value, mongoc_client_ptr value)
 {
    future_value->type = future_value_mongoc_client_ptr_type;
    future_value->mongoc_client_ptr_value = value;
@@ -245,8 +238,7 @@ future_value_get_mongoc_client_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_collection_ptr (future_value_t *future_value,
-                                        mongoc_collection_ptr value)
+future_value_set_mongoc_collection_ptr (future_value_t *future_value, mongoc_collection_ptr value)
 {
    future_value->type = future_value_mongoc_collection_ptr_type;
    future_value->mongoc_collection_ptr_value = value;
@@ -260,8 +252,7 @@ future_value_get_mongoc_collection_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_cursor_ptr (future_value_t *future_value,
-                                    mongoc_cursor_ptr value)
+future_value_set_mongoc_cursor_ptr (future_value_t *future_value, mongoc_cursor_ptr value)
 {
    future_value->type = future_value_mongoc_cursor_ptr_type;
    future_value->mongoc_cursor_ptr_value = value;
@@ -275,8 +266,7 @@ future_value_get_mongoc_cursor_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_database_ptr (future_value_t *future_value,
-                                      mongoc_database_ptr value)
+future_value_set_mongoc_database_ptr (future_value_t *future_value, mongoc_database_ptr value)
 {
    future_value->type = future_value_mongoc_database_ptr_type;
    future_value->mongoc_database_ptr_value = value;
@@ -290,8 +280,7 @@ future_value_get_mongoc_database_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_gridfs_file_ptr (future_value_t *future_value,
-                                         mongoc_gridfs_file_ptr value)
+future_value_set_mongoc_gridfs_file_ptr (future_value_t *future_value, mongoc_gridfs_file_ptr value)
 {
    future_value->type = future_value_mongoc_gridfs_file_ptr_type;
    future_value->mongoc_gridfs_file_ptr_value = value;
@@ -305,8 +294,7 @@ future_value_get_mongoc_gridfs_file_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_gridfs_ptr (future_value_t *future_value,
-                                    mongoc_gridfs_ptr value)
+future_value_set_mongoc_gridfs_ptr (future_value_t *future_value, mongoc_gridfs_ptr value)
 {
    future_value->type = future_value_mongoc_gridfs_ptr_type;
    future_value->mongoc_gridfs_ptr_value = value;
@@ -320,8 +308,7 @@ future_value_get_mongoc_gridfs_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_insert_flags_t (future_value_t *future_value,
-                                        mongoc_insert_flags_t value)
+future_value_set_mongoc_insert_flags_t (future_value_t *future_value, mongoc_insert_flags_t value)
 {
    future_value->type = future_value_mongoc_insert_flags_t_type;
    future_value->mongoc_insert_flags_t_value = value;
@@ -335,8 +322,7 @@ future_value_get_mongoc_insert_flags_t (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_iovec_ptr (future_value_t *future_value,
-                                   mongoc_iovec_ptr value)
+future_value_set_mongoc_iovec_ptr (future_value_t *future_value, mongoc_iovec_ptr value)
 {
    future_value->type = future_value_mongoc_iovec_ptr_type;
    future_value->mongoc_iovec_ptr_value = value;
@@ -350,8 +336,7 @@ future_value_get_mongoc_iovec_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_query_flags_t (future_value_t *future_value,
-                                       mongoc_query_flags_t value)
+future_value_set_mongoc_query_flags_t (future_value_t *future_value, mongoc_query_flags_t value)
 {
    future_value->type = future_value_mongoc_query_flags_t_type;
    future_value->mongoc_query_flags_t_value = value;
@@ -365,8 +350,7 @@ future_value_get_mongoc_query_flags_t (future_value_t *future_value)
 }
 
 void
-future_value_set_const_mongoc_index_opt_t (future_value_t *future_value,
-                                           const_mongoc_index_opt_t value)
+future_value_set_const_mongoc_index_opt_t (future_value_t *future_value, const_mongoc_index_opt_t value)
 {
    future_value->type = future_value_const_mongoc_index_opt_t_type;
    future_value->const_mongoc_index_opt_t_value = value;
@@ -375,14 +359,12 @@ future_value_set_const_mongoc_index_opt_t (future_value_t *future_value,
 const_mongoc_index_opt_t
 future_value_get_const_mongoc_index_opt_t (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_const_mongoc_index_opt_t_type);
+   BSON_ASSERT (future_value->type == future_value_const_mongoc_index_opt_t_type);
    return future_value->const_mongoc_index_opt_t_value;
 }
 
 void
-future_value_set_mongoc_server_description_ptr (
-   future_value_t *future_value, mongoc_server_description_ptr value)
+future_value_set_mongoc_server_description_ptr (future_value_t *future_value, mongoc_server_description_ptr value)
 {
    future_value->type = future_value_mongoc_server_description_ptr_type;
    future_value->mongoc_server_description_ptr_value = value;
@@ -391,14 +373,12 @@ future_value_set_mongoc_server_description_ptr (
 mongoc_server_description_ptr
 future_value_get_mongoc_server_description_ptr (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_mongoc_server_description_ptr_type);
+   BSON_ASSERT (future_value->type == future_value_mongoc_server_description_ptr_type);
    return future_value->mongoc_server_description_ptr_value;
 }
 
 void
-future_value_set_mongoc_ss_optype_t (future_value_t *future_value,
-                                     mongoc_ss_optype_t value)
+future_value_set_mongoc_ss_optype_t (future_value_t *future_value, mongoc_ss_optype_t value)
 {
    future_value->type = future_value_mongoc_ss_optype_t_type;
    future_value->mongoc_ss_optype_t_value = value;
@@ -412,8 +392,7 @@ future_value_get_mongoc_ss_optype_t (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_topology_ptr (future_value_t *future_value,
-                                      mongoc_topology_ptr value)
+future_value_set_mongoc_topology_ptr (future_value_t *future_value, mongoc_topology_ptr value)
 {
    future_value->type = future_value_mongoc_topology_ptr_type;
    future_value->mongoc_topology_ptr_value = value;
@@ -427,8 +406,7 @@ future_value_get_mongoc_topology_ptr (future_value_t *future_value)
 }
 
 void
-future_value_set_mongoc_write_concern_ptr (future_value_t *future_value,
-                                           mongoc_write_concern_ptr value)
+future_value_set_mongoc_write_concern_ptr (future_value_t *future_value, mongoc_write_concern_ptr value)
 {
    future_value->type = future_value_mongoc_write_concern_ptr_type;
    future_value->mongoc_write_concern_ptr_value = value;
@@ -437,31 +415,26 @@ future_value_set_mongoc_write_concern_ptr (future_value_t *future_value,
 mongoc_write_concern_ptr
 future_value_get_mongoc_write_concern_ptr (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_mongoc_write_concern_ptr_type);
+   BSON_ASSERT (future_value->type == future_value_mongoc_write_concern_ptr_type);
    return future_value->mongoc_write_concern_ptr_value;
 }
 
 void
-future_value_set_const_mongoc_find_and_modify_opts_ptr (
-   future_value_t *future_value, const_mongoc_find_and_modify_opts_ptr value)
+future_value_set_const_mongoc_find_and_modify_opts_ptr (future_value_t *future_value, const_mongoc_find_and_modify_opts_ptr value)
 {
    future_value->type = future_value_const_mongoc_find_and_modify_opts_ptr_type;
    future_value->const_mongoc_find_and_modify_opts_ptr_value = value;
 }
 
 const_mongoc_find_and_modify_opts_ptr
-future_value_get_const_mongoc_find_and_modify_opts_ptr (
-   future_value_t *future_value)
+future_value_get_const_mongoc_find_and_modify_opts_ptr (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_const_mongoc_find_and_modify_opts_ptr_type);
+   BSON_ASSERT (future_value->type == future_value_const_mongoc_find_and_modify_opts_ptr_type);
    return future_value->const_mongoc_find_and_modify_opts_ptr_value;
 }
 
 void
-future_value_set_const_mongoc_read_prefs_ptr (future_value_t *future_value,
-                                              const_mongoc_read_prefs_ptr value)
+future_value_set_const_mongoc_read_prefs_ptr (future_value_t *future_value, const_mongoc_read_prefs_ptr value)
 {
    future_value->type = future_value_const_mongoc_read_prefs_ptr_type;
    future_value->const_mongoc_read_prefs_ptr_value = value;
@@ -470,14 +443,12 @@ future_value_set_const_mongoc_read_prefs_ptr (future_value_t *future_value,
 const_mongoc_read_prefs_ptr
 future_value_get_const_mongoc_read_prefs_ptr (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_const_mongoc_read_prefs_ptr_type);
+   BSON_ASSERT (future_value->type == future_value_const_mongoc_read_prefs_ptr_type);
    return future_value->const_mongoc_read_prefs_ptr_value;
 }
 
 void
-future_value_set_const_mongoc_write_concern_ptr (
-   future_value_t *future_value, const_mongoc_write_concern_ptr value)
+future_value_set_const_mongoc_write_concern_ptr (future_value_t *future_value, const_mongoc_write_concern_ptr value)
 {
    future_value->type = future_value_const_mongoc_write_concern_ptr_type;
    future_value->const_mongoc_write_concern_ptr_value = value;
@@ -486,7 +457,6 @@ future_value_set_const_mongoc_write_concern_ptr (
 const_mongoc_write_concern_ptr
 future_value_get_const_mongoc_write_concern_ptr (future_value_t *future_value)
 {
-   BSON_ASSERT (future_value->type ==
-                future_value_const_mongoc_write_concern_ptr_type);
+   BSON_ASSERT (future_value->type == future_value_const_mongoc_write_concern_ptr_type);
    return future_value->const_mongoc_write_concern_ptr_value;
 }
